Java 21 deprecation fixes
* new Locale - Locale.of
* Thread.getId -> Thread.threadId